# micro-console-runtime

./: .dockerignore  .gitignore  .gitmessage  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md
.githooks/: commit-msg
.github/workflows/: ci.yml
docs/: ROADMAP.md
docs/adr/: 0001-allocator-contract.md  0001-split-allocation-routing.md  0002-alignment-routing-policy.md
include/: SlabAllocator.hpp  slab_allocator.h  slab_manager.h
scripts/: setup-dev.sh
src/: CMakeLists.txt  SlabAllocator.cpp  main.cpp  slab_allocator.cpp  slab_manager.cpp
tests/: CMakeLists.txt  SlabAllocatorTest.cpp  benchmark_slab.cpp  slab_allocator_test.cpp  slab_manager_test.cpp  test_manager.cpp  test_slab.cpp  test_slab_basic.cpp
